--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,29 @@
 .App {
   text-align: center;
+  background-image: url("img/bg/samaritanbg.png");
+  background-size: 100% 100%;
+  opacity: 1;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  /* animation: App-logo-spin infinite 20s linear; */
+  height: 3vmin;
+  /* pointer-events: none; */
+  /* background-image: url("img/samaritan-signal.png"); */
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: whitesmoke; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(8px + 2vmin);
+  color: black;
+  text-decoration: underline;
+  /* background-image: url("img/bg/lensgrid.png");
+  background-size: 100% 100%; */
 }
 
 .App-link {
