--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
   background-image: url("img/bg/samaritanbg.png");
   background-size: 100% 100%;
+
+  opacity: 1;
+}
+
+.AppTest {
+  text-align: center;
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
   opacity: 1;
 }
 
